<resources>
    <string name="app_name">Procurement System Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate_format">MM/dd/yyyy</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="add_picture">Add Picture</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="good_morning_name">Good Morning, Name!</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_home_dashboard">Home/Dashboard</string>
    <string name="inventory_monitoring">Inventory Monitoring</string>
    <string name="incoming_inventory_tracker">Incoming Inventory Tracker</string>
    <string name="email_address_sample">juandelacruz@mail.com</string>
    <string name="inventory_statistics">Inventory Statistics</string>
    <string name="purchase_orders">Purchase Orders</string>
    <string name="sales_orders">Sales Orders</string>
    <string name="bill_of_materials">Bill Of Materials</string>
    <string name="log_out">Log Out</string>
    <string name="inventory_stock">Inventory Stock</string>
    <string name="product_name">Product Name</string>
    <string name="description_details">Description / Details</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
</resources>