<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_dashboard">

    <fragment
        android:id="@+id/nav_home_dashboard"
        android:name="ph.kodego.victor.yu.leones.patricia.ivee.procurementsystemapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_inventory_monitoring"
        android:name="ph.kodego.victor.yu.leones.patricia.ivee.procurementsystemapplication.ui.inventorymonitoring.InventoryMonitoringFragment"
        android:label="@string/inventory_monitoring"
        tools:layout="@layout/fragment_inventory_monitoring" />

    <fragment
        android:id="@+id/nav_incoming_inventory_tracker"
        android:name="ph.kodego.victor.yu.leones.patricia.ivee.procurementsystemapplication.ui.incominginventorytracker.IncomingInventoryTrackerFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_incoming_inventory_tracker" />

    <fragment
        android:id="@+id/nav_inventory_statistics"
        android:name="ph.kodego.victor.yu.leones.patricia.ivee.procurementsystemapplication.ui.inventorystatistics.InventoryStatisticsFragment"
        android:label="@string/inventory_statistics"
        tools:layout="@layout/fragment_inventory_statistics"/>

    <fragment
        android:id="@+id/nav_purchase_orders"
        android:name="ph.kodego.victor.yu.leones.patricia.ivee.procurementsystemapplication.ui.purchaseorders.PurchaseOrdersFragment"
        android:label="@string/purchase_orders"
        tools:layout="@layout/fragment_purchase_orders"/>

    <fragment
        android:id="@+id/nav_sales_orders"
        android:name="ph.kodego.victor.yu.leones.patricia.ivee.procurementsystemapplication.ui.salesorders.SalesOrdersFragment"
        android:label="@string/sales_orders"
        tools:layout="@layout/fragment_sales_orders"/>

    <fragment
        android:id="@+id/nav_bill_of_materials"
        android:name="ph.kodego.victor.yu.leones.patricia.ivee.procurementsystemapplication.ui.billofmaterials.BillOfMaterialsFragment"
        android:label="@string/bill_of_materials"
        tools:layout="@layout/fragment_bill_of_materials"/>
</navigation>